--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+/* Add spinner animation */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 html,
 body {
   margin: 0;
